--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <name>UVMS Service clients</name>
     <groupId>eu.europa.ec.fisheries.uvms.service.client</groupId>
     <artifactId>client</artifactId>    
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     
     <description>Super POM for all UVMS web services clients</description>
     <packaging>pom</packaging>
