--- a/flux-movement/pom.xml
+++ b/flux-movement/pom.xml
@@ -9,11 +9,9 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <contract.name>bridge-connector</contract.name>
         <project.scm.id>github</project.scm.id>
-        <maven-release-plugin>2.5.3</maven-release-plugin>
         <build.helper.plugin.version>1.10</build.helper.plugin.version>
         <jaxb2.version>2.2</jaxb2.version>
     </properties>
@@ -22,7 +20,7 @@
         <repository>
             <id>focus-repo</id>
             <name>Focus nexus repository</name>
-            <url>http://nexus.focus.fish/</url>
+            <url>http://nexus.focus.fish/nexus/</url>
         </repository>
     </repositories>
 
@@ -47,15 +45,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.source}</target>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>${build.helper.plugin.version}</version>
@@ -74,8 +63,6 @@
                     </execution>
                 </executions>
             </plugin>
-            
-            
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
@@ -99,18 +86,6 @@
                         <xjbSource>${basedir}/src/main/resources/contract/bindings.xjb</xjbSource>
                     </xjbSources>
                 </configuration>
-            </plugin>
-            
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>${maven-release-plugin}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.8.1</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>    
