--- a/flux-message-sender/pom.xml
+++ b/flux-message-sender/pom.xml
@@ -6,7 +6,7 @@
     
     <groupId>eu.europa.ec.fisheries.uvms.service.client</groupId>
     <artifactId>connector-bridge-client</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <description>JAXWS client for FLUX outgoing service</description>
 	
     <properties>
