--- a/flux-message-reciever/pom.xml
+++ b/flux-message-reciever/pom.xml
@@ -6,7 +6,7 @@
     
     <groupId>eu.europa.ec.fisheries.uvms.service.client</groupId>
     <artifactId>bridge-connector-client</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
     <description>JAXWS client for FLUX incoming service</description>
 	
     <properties>
@@ -152,7 +152,7 @@
 
     <scm>
         <connection>scm:git:https://github.com/UnionVMS/UVMS-ExchangeModule-JAXB-CLIENT.git</connection>
-      <tag>client-2.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
 </project>
