--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>UVMS Service clients</name>
     <groupId>eu.europa.ec.fisheries.uvms.service.client</groupId>
     <artifactId>client</artifactId>    
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
     
     <description>Super POM for all UVMS web services clients</description>
     <packaging>pom</packaging>
@@ -50,7 +50,7 @@
 
     <scm>
         <connection>scm:git:https://github.com/UnionVMS/UVMS-ExchangeModule-JAXB-CLIENT.git</connection>
-        <tag>client-2.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
